--- a/views/partials/forumheader.ejs
+++ b/views/partials/forumheader.ejs
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="description"
-    content="AlgoVIz is a web platform which is used to visualize the sorting algorithms. It supports Merge, Quick, Bubble, Heap, Selection, Insertion, Shell, Cocktail shaker, comb, and cycle sort.">
+    content="AlgoVIz is a web platform which is used to visualize the sorting algorithms. It supports Merge, Quick, Bubble, Selection sort.">
   <meta name="keywords"
-    content="algorithms, visualization, sorting algorithms, heap sort, merge sort, quick sort, bubble sort, selection sort, insertion sort, shell sort, cocktail-shaker sort, comb sort, cycle sort, sorting algorithms visualization">
+    content="algorithms, visualization, sorting algorithms, merge sort, quick sort, bubble sort, selection sort, insertion sorting algorithms visualization">
 
   <!-- google fonts link -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
